fix(web): revert to standard build placeholder in index.html
- Revert `web/index.html` to use the standard pattern `var serviceWorkerVersion = '{{flutter_service_worker_version}}';` (single quotes).
- This ensures the Flutter build tool can find the placeholder and inject `_flutter.buildConfig`, resolving the `FlutterLoader.load` error.
- Removed the `try-catch` block which was interfering with the build process.

--- a/web/index.html
+++ b/web/index.html
@@ -34,19 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = null;
-    // We use a try-catch block or conditional assignment to safely handle the placeholder replacement.
-    // If the replacement logic injects a valid string, this assignment will override null.
-    // If the replacement logic fails or produces invalid syntax when interacting with quotes,
-    // we try to mitigate.
-
-    // Standard template uses: var serviceWorkerVersion = "{{flutter_service_worker_version}}";
-    // We use backticks to avoid issues with double/single quotes in the replaced value.
-    try {
-       serviceWorkerVersion = `{{flutter_service_worker_version}}`;
-    } catch (e) {
-       console.warn("Failed to set serviceWorkerVersion from placeholder", e);
-    }
+    var serviceWorkerVersion = '{{flutter_service_worker_version}}';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
